--- a/README
+++ b/README
@@ -20,6 +20,8 @@ Install?
     kivy: pip install kivy
     
 Run? 
+    Video Demo: http://www.youtube.com/watch?v=lP0D92EIMKY
+
     python main.py from whatever directory you've downloaded the project to. 
     
     You'll be presented with a file open dialog. Pick a timeline file generated 
